{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "JetInputs",
            "id": "0da333bd-f65c-40c1-bed3-7eecf348499c",
            "actions": [
                {
                    "name": "AxisMovement",
                    "type": "Value",
                    "id": "08672cd3-2903-41ea-8205-b283f56faae1",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.3)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MainAttack",
                    "type": "Button",
                    "id": "86abe2a7-0190-4cff-a96c-6724d319ede5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAttack",
                    "type": "Button",
                    "id": "7a837169-03f8-4214-9bb6-354f0ad0b86e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b5064ec-d709-4324-88ad-c16ebd54bece",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b3bd6b3-780b-4869-9104-0456fae37cf0",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5420b72f-5e7c-4a03-aa74-1e3524d41ec4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}